--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.24.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.15.6",
+    "firebase": "^9.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.6.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -24,7 +29,9 @@
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "vue-cli-plugin-vuetify": "~2.4.4",
+    "vuetify-loader": "^1.7.0"    
   },
   "eslintConfig": {
     "root": true,
